add inventory tag
